**Breaking change to HUPnP API && ABI**
** NOTE: these changes start the shift to 0.5 and some of the planned changes are not done yet. In addition, some of the new API decisions are still under consideration and further changes may come. **

- Significant redesign of the hosting API.
  * HControlPoint has now more power and configurability. ** NOTE: further changes will come and some of the changes are not finished **
  * HAbstractHost is gone, since the similarities of HDeviceHost and HControlPoint are superficial at best and the class did not introduce nothing useful to the public. It was an implementation detail that should have not been exposed in the first place.
  * HDeviceHost introduces some changes in the API as well, mainly to make it more extensible. ** NOTE: further changes will come and some of the changes are not finished **
  * Both HDeviceHost and HControlPoint no longer expose the device trees (HUPnP device model) using QSharedPointer. Raw pointers are used instead. This changes the semantics of HDevice use and deletion notably. These issues are detailed in the API reference.

- Event subscription at the control point now uses Qt event loop only (used threads before). This change is part of the plan of reducing worker thread usage to absolute minimum and attempting to utilize the Qt event loop as much as possible instead.
- Removed the 'T' postfix of certain type definitions, as it isn't part of the Qt's design conventions. This was suggested by Bart Carneels <bart.carneels@kde.org>. Thanks!
- Renamed the toReadable() and toWritable() methods in HStateVariable to readable() and writable() to better convey the semantics that new unrelated types are not created. This was suggested by Bart Carneels <bart.carneels@kde.org> and Thiago Macieira. Thanks!
- Fixed a bug relating to the resolution of absolute URLs in the description documents. This was found by James Wa <jw@jameswa.com>. Thanks!
- Fixed a few bugs in http messaging.
- Decided to remove the t

--- a/herqq/hupnp/ChangeLog
+++ b/herqq/hupnp/ChangeLog
@@ -1,5 +1,32 @@
 # HUPnP Changelog
 
+HUPnP 0.4.0 [Mar. 4, 2010]
+- Modified the design of state variables and their use. More specifically, the API is now clear 
+that state variables can be changed directly only at server-side.
+
+- Added the possibility of locking a writable state variable for exclusive access at server-side.
+
+- Modified the design of action arguments. Input and output arguments are no longer separated at type-level.
+
+- Removed exception usage from HTTP messaging. This was mainly because of a MinGW bug (http://sourceforge.net/tracker/index.php?func=detail&aid=2837096&group_id=2435&atid=102435), which essentially causes multi-threaded exception usage be unsafe. Please note, HUPnP still uses exceptions elsewhere, which means that with MinGW 4.4.0 HUPnP is subject to crashes. The HUPnP HTTP messaging used exceptions to signal timeouts, peer disconnects and such, which made the bug all too easy to appear in case multiple threads were simultaneously running their own HUPnP HTTP messaging "engines". This is the case with the simple HUPnP test app, which enables the launch of a HDeviceHost and multiple HControlPoints within the same process using separate threads.
+
+- Modified the server-side action invocation mechanics when the invocations come over the network.
+
+- Modified the example application to use the state variable locker, which fixes a race condition.
+
+- Fixed a few errors in internal HTTP messaging code. These mainly affected action invocation and
+event notification.
+
+- Modified the internal asynch. HTTP handler code to support chunked encoding.
+
+- Removed insulation from a few small classes that are unlikely to change.
+
+- Some small optimizations here and there.
+
+- Updated documentation.
+
+- Many smaller improvements not worth mentioning individually.
+
 HUPnP 0.3.0 [Feb. 17, 2010]
 - Significant refactoring of the project, file and class structures.
 
